# SIIA

.github/: copilot-instructions.md
mobile/: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.mobile  buildozer.spec  docker-entrypoint-dev.sh  docker-entrypoint.sh  main.py  requirements.txt  siia.kv
website/: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .prettierrc  DOCKER.md  DOCKER_README.md  Dockerfile  Dockerfile.dev  Dockerfile.web  MQTT_IMPLEMENTATION_SUMMARY.md  Makefile  README-ROTAS.md  README.md  TESTING.md  app.py  conftest.py  db-init.sh  db-rm.sh  debug-test.sh  docker-compose.yml  init.sql  log.txt  model.sql  package-lock.json  package.json  postcss.config.js  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  run-test.sh  setup.sh  tailwind.config.js  up.sh  validate.sh
website/.github/workflows/: ci-cd.yml
website/lib/: firebase.py  models.py  mqtt.py  mqtt_new.py  utils.py
website/static/src/: input.css
website/templates/: esqueci_senha.html  index.html  login.html  perfil.html  redefinir_senha.html  registrar.html
website/templates/admin/: dashboard.html  index.html
website/templates/admin/condicoes/: create.html  list.html
website/templates/admin/culturas/: create.html  detail.html  edit.html  list.html
website/templates/admin/fertilizantes/: create.html  edit.html  list.html
website/templates/admin/logs/: list.html
website/templates/admin/mqtt/: dashboard.html  devices.html
website/templates/admin/sessoes/: create.html  detail.html  edit.html  list.html
website/templates/admin/unidades/: create.html  edit.html  list.html
website/templates/admin/usuarios/: edit.html  list.html
website/templates/components/: base.html  footer.html  header.html
website/templates/components/flash/: error.html  success.html
website/tests/: test_admin_routes.py  test_admin_routes_fixed.py  test_api_mobile.py  test_auth.py  test_integration.py  test_models.py  test_mqtt.py  test_unit_misc.py
